[package]
name = "tinydnsproxy"
version = "0.1.0"
authors = ["sewh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
curl = "0.4"
num_cpus = "1.13"
rand = "0.7"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
threadpool = "1.8"
toml = "0.5"
